mirage/log
+ ocamlfind ocamlc -config
+ ocamlfind ocamldep -package mirage -modules config.ml > config.ml.depends
+ ocamlfind ocamlc -c -annot -bin-annot -package mirage -o config.cmo config.ml
+ ocamlfind ocamlc -c -annot -bin-annot -package mirage -o config.cmo config.ml
File "config.ml", line 2, characters 5-13:
2 | open Cmdliner
         ^^^^^^^^
Error: Unbound module Cmdliner
Command exited with code 2.
Hint: Recursive traversal of subdirectories was not enabled for this build,
  as the working directory does not look like an ocamlbuild project (no
  '_tags' or 'myocamlbuild.ml' file). If you have modules in subdirectories,
  you should add the option "-r" or create an empty '_tags' file.
  
  To enable recursive traversal for some subdirectories only, you can use the
  following '_tags' file:
  
      true: -traverse
      <dir1> or <dir2>: traverse
      
